# text-rewriter-by-personality

./: .dockerignore  LICENSE  README.md  docker-compose.yml  example.env
rewriter.client/: Dockerfile  pyproject.toml
rewriter.client/src/: main.py
rewriter.server/: Dockerfile  pyproject.toml
rewriter.server/src/: langchain_gemini.py  main.py  rewriter.py
rewriter.server/src/prompt_templates/: rewriter_by_personality.py
