[project]
name = "rewriter-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Yakiv Artiukhov",email = "yakiv.artiukhov@valtech.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
