[project]
name = "rewriter-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Yakiv Artiukhov",email = "yakiv.artiukhov@valtech.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "langchain[google-genai] (>=0.3.26,<0.4.0)",
    "langchain-core (>=0.3.71,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
